syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "./pb";

// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0";
  };
  external_docs: {
    url: "https://github.com/foreverjie/turboSite";
    description: "Turbo site Go Backend";
  }
  schemes: HTTPS;
};

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    int64 created = 5;
    int64 updated = 6;
}

message GetUserRequest {
    string id = 1;
}

message ListUsersRequest {}

message DeleteUserResponse {
    string id = 1;
}

message SignInRequest {
    string email = 1;
    string password = 2;
}

message SignInResponse {
    User user = 1;
    string token = 2;
}

service AuthService {
    rpc SignUp(User) returns (User) {
      option (google.api.http) = {
        // Route to this method from POST requests to /api/v1/users
        post: "/api/v1/users"
        body: "*"
      };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        summary: "Add a user"
        description: "Add a user to the server."
        tags: "Users"
      };
    };
    rpc SignIn(SignInRequest) returns (SignInResponse);
    rpc GetUser(GetUserRequest) returns (User);
    rpc ListUsers(ListUsersRequest) returns (stream User);
    rpc UpdateUser(User) returns (User);
    rpc DeleteUser(GetUserRequest) returns (DeleteUserResponse);
}